tests/neg/explicit-null-override/J.java
class C<T> {}

class J {
	void foo(String x){ }
	void bar(C<C<C<String>>> x){}
	Object zoom(Object x){ return x; }
}
